# GMM

./: .gitignore  README.md  index.html  optimize-entity-images.js  package-lock.json  package.json
.github/workflows/: AutoBuild.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/definitions/: base_entities.toml  genshin.toml  wuwa.toml  zzz.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddToPresetModal.jsx  ConfirmationModal.jsx  ContextMenu.jsx  EnhancedLibraryStats.jsx  EntityCard.jsx  EntityCardSkeleton.jsx  FirstLaunchSetup.jsx  GameSwitcher.jsx  ImportModModal.jsx  KeybindsPopup.jsx  LightboxModal.jsx  ModCard.jsx  ModCardSkeleton.jsx  ModEditModal.jsx  ModStatsDashboard.jsx  ScanProgressPopup.jsx  Sidebar.jsx
src/contexts/: SettingsContext.jsx
src/pages/: EntityPage.jsx  HomeDashboard.jsx  HomePage.jsx  PlaceholderPage.jsx  PresetPage.jsx  SettingsPage.jsx
src/styles/: LightboxModal.css  main.css
src/utils/: localStorage.js
